fix: layout shift from mobile clashing with margin top in percentage

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body {
   align-items: center;
   padding: 2rem 2rem;
   flex-shrink: 0;
-  margin-top: 7%;
+  margin-top: 3rem;
   position: relative;
 }
 
